# internal/dto/auth.go
@@ -16,7 +16,16 @@ type (
 	}
 
 	LoginResponse struct {
-		Token string `json:"token"`
+		AccessToken  string `json:"access_token"`
+		RefreshToken string `json:"refresh_token"`
+	}
+
+	RefreshTokenRequest struct {
+		RefreshToken string `json:"refresh_token" validate:"required"`
+	}
+
+	RefreshTokenResponse struct {
+		AccessToken string `json:"access_token"`
 	}
 
 	CreateUserResponse struct {
