# internal/service/auth/model/model.go
@@ -1,0 +1,12 @@
+package model
+
+type (
+	TokenPair struct {
+		AccessToken  string `json:"access_token"`
+		RefreshToken string `json:"refresh_token"`
+	}
+
+	RefreshAccessTokenResult struct {
+		AccessToken string `json:"access_token"`
+	}
+)
